# socle_fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  justfile  pyproject.toml
app/: main.py
app/api/middlewares/: logging.py
app/api/repositories/: user.py
app/api/routes/: examples.py  health.py  router.py
app/core/: config.py  constants.py  database.py  exceptions.py  logging.py  schemas.py  telemetry.py
app/models/: user.py
app/schemas/: user.py
entrypoints/: gunicorn.sh
gunicorn/: gunicorn_conf.py
migrations/: env.py
migrations/versions/: 8642e22b4aef_create_user_table.py
tests/: test_examples_routes.py  test_health_routes.py  test_main.py
